Update CSS and HTML files

--- a/index.html
+++ b/index.html
@@ -67,14 +67,11 @@
 
     	<!-- start home -->
 		<section id="home">
-			<video autoplay loop muted class="video-bg">
-				<source src="/images/BackGroundMoving.mp4" type="video/mp4">
-			  </video>
 			<div class="container">
 				<div class="row justify-content-center"> <!-- Centering the row -->
 					<!-- Column for the image -->
 					<div class="col-md-4 text-center"> <!-- Centering the content within the column -->
-						<img src="/images/NexxusLabLogo.png" alt="Description of image" class="img-responsive">
+						<img src="/images/3DNexxusLogo.gif" alt="Description of image" class="img-responsive">
 					</div>
 					<!-- Column for the text -->
 					<div class="col-md-7">
@@ -317,7 +314,7 @@
     						<p class="address-title">GET IN TOUCH WITH US</p>
     						<span>Set a google meeting appointment with us!</span>
 					<!-- Calendly inline widget begin -->
-							<div class="calendly-inline-widget" data-url="https://calendly.com/nexxuslabtest/ask-me-anything?hide_event_type_details=1&hide_gdpr_banner=1&background_color=dbd9d9&text_color=030303" style="min-width:320px;height:700px;"></div>
+							<div class="calendly-inline-widget" data-url="https://calendly.com/nexxuslabtest/ask-me-anything?hide_event_type_details=1&hide_gdpr_banner=1&background_color=303030&text_color=fff" style="min-width:320px;height:700px;"></div>
 							<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 					<!-- Calendly inline widget end -->
 						</address>
