--- a/index.html
+++ b/index.html
@@ -45,11 +45,9 @@
 						<span class="icon icon-bar"></span>
 						<span class="icon icon-bar"></span>
 					</button>
-				</div>
 					<a href="#home" class="navbar-brand">
-						<img src="images/NexxusLabLogo.png" alt="Company Logo" class="logo">
-						NEXXUS LAB
-					</a>
+						<img src="images/NexxusLabLogo.png" alt="Company Logo" class="logo">NEXXUS LAB</a>
+					</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#top">HOME</a></li>
