Changes in Book an Appointment Button

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<span class="icon icon-bar"></span>
 						<span class="icon icon-bar"></span>
 					</button>
-					<a href="#home" class="navbar-brand">
+					<a href="#top" class="navbar-brand">
 						<img src="images/NexxusLabLogo.png" alt="Company Logo" class="logo">NEXXUS LAB</a>
 					</div>
 				<div class="collapse navbar-collapse">
@@ -79,9 +79,7 @@
 							<div class="sub-element">We are a team of developers and advisors from the Philippines.</div>
 							<div class="sub-element">Contact us for more inquiries.</div>
 						</div>
-						<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-						<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-						<a data-scroll href="" class="btn btn-default wow fadeInUp" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/nexxuslabtest/ask-me-anything?background_color=e6e6e6'});return false;" data-wow-offset="50" data-wow-delay="0.6s">BOOK AN APPOINTMENT</a>
+						<a data-scroll href="#contact" class="btn btn-default wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s" onclick="scrollToContact()">BOOK AN APPOINTMENT</a>
 					</div>
 				</div>
 			</div>
