Updating HTML file

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Nexxus Lab</title>
+		<title>NexxusLab - Leave the Tech to us!</title>
 		<meta name="keywords" content="">
 		<meta name="description" content="">
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
+		<link rel="icon" href="images/3DNexxusLogo.gif?v=2" type="image/gif">
 		<link rel="stylesheet" href="css/animate.min.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
@@ -141,56 +142,56 @@
 										<div class="mySlides fade">
 											<div class="numbertext"></div>
 											<a href="https://sites.google.com/view/mychapters/home?authuser=0" target="_blank">
-												<img src="images/Portfolio1.png" style="width:100%" alt="Portfolio Image">
+												<img src="images/Portfolio/Portfolio1.png" style="width:100%" alt="Portfolio Image">
 											</a>
 										</div>
 									
 										<div class="mySlides fade">
 											<div class="numbertext"></div>
 											<a href="https://sites.google.com/view/mcsuppliesph/home" target="_blank">
-												<img src="images/Portfolio2.png" style="width:100%" alt="Portfolio Image">
+												<img src="images/Portfolio/Portfolio2.png" style="width:100%" alt="Portfolio Image">
 											</a>
 										</div>
 									
 										<div class="mySlides fade">
 											<div class="numbertext"></div>
 											<a href="https://sites.google.com/view/ai-defendbot/home" target="_blank">
-												<img src="images/Portfolio3.png" style="width:100%" alt="Portfolio Image">
+												<img src="images/Portfolio/Portfolio3.png" style="width:100%" alt="Portfolio Image">
 											</a>
 										</div>
 
 										<div class="mySlides fade">
 											<div class="numbertext"></div>
 											<a href="https://tapstaffingsolutions.com/#our-services" target="_blank">
-												<img src="images/Portfolio4.png" style="width:100%" alt="Portfolio Image">
+												<img src="images/Portfolio/Portfolio4.png" style="width:100%" alt="Portfolio Image">
 											</a>
 										</div>
 
 										<div class="mySlides fade">
 											<div class="numbertext"></div>
 											<a href="https://sites.google.com/view/bonnie-factor/home" target="_blank">
-												<img src="images/Portfolio5.png" style="width:100%" alt="Portfolio Image">
+												<img src="images/Portfolio/Portfolio5.png" style="width:100%" alt="Portfolio Image">
 											</a>
 										</div>
 
 										<div class="mySlides fade">
 											<div class="numbertext"></div>
 											<a href="https://sites.google.com/view/top100ai/home" target="_blank">
-												<img src="images/Portfolio6.png" style="width:100%" alt="Portfolio Image">
+												<img src="images/Portfolio/Portfolio6.png" style="width:100%" alt="Portfolio Image">
 											</a>
 										</div>
 
 										<div class="mySlides fade">
 											<div class="numbertext"></div>
 											<a href="https://sites.google.com/view/scaleui/home" target="_blank">
-												<img src="images/Portfolio7.png" style="width:100%" alt="Portfolio Image">
+												<img src="images/Portfolio/Portfolio7.png" style="width:100%" alt="Portfolio Image">
 											</a>
 										</div>
 
 										<div class="mySlides fade">
 											<div class="numbertext"></div>
 											<a href="https://sites.google.com/view/fundraisingforjedd/home" target="_blank">
-												<img src="images/Portfolio8.png" style="width:100%" alt="Portfolio Image">
+												<img src="images/Portfolio/Portfolio8.png" style="width:100%" alt="Portfolio Image">
 											</a>
 										</div>
 									</div>
@@ -272,7 +273,7 @@
     				<div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.3s">
     					<div class="team-wrapper">
 							<a href="https://www.linkedin.com/in/chris-bautista-31935854/" target="_blank" class="team-link">
-    						<img src="images/Team_SirChris.png" class="img-responsive" alt="team img 1">
+    						<img src="images/Team/Team_SirChris.png" class="img-responsive" alt="team img 1">
     							<div class="team-des">
     								<h4>Chris Bautista</h4>
     								<span>Founder and CEO</span>
@@ -284,7 +285,7 @@
     				<div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.6s">
     					<div class="team-wrapper">
 							<a href="https://www.linkedin.com/in/loreleensablot/" target="_blank" class="team-link">
-    						<img src="images/Team_MissLoreleen.png" class="img-responsive" alt="team img 2">
+    						<img src="images/Team/Team_MissLoreleen.png" class="img-responsive" alt="team img 2">
     							<div class="team-des">
     								<h4>Loreleen Mae Sablot</h4>
     								<span>Co-founder and Senior Software Engineer</span>
