--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 				</div>
 			</div>
 		</section>
-		<!-- end principles -->
+		<!-- end principless -->
 
     	<!-- start team -->
     	<section id="team">
