--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<link rel="icon" href="../images/3DNexxusLogo.gif?v=2" type="image/gif">
-		<link rel="stylesheet" href="../css/animate.min.css">
-		<link rel="stylesheet" href="../css/bootstrap.min.css">
-		<link rel="stylesheet" href="../css/font-awesome.min.css">
+		<link rel="icon" href="images/3DNexxusLogo.gif?v=2" type="image/gif">
+		<link rel="stylesheet" href="css/animate.min.css">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/font-awesome.min.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="../css/style.css">
+		<link rel="stylesheet" href="css/style.css">
 
 
-		<script src="../js/jquery.js"></script>
-		<script src="../js/bootstrap.min.js"></script>
-        <script src="../js/jquery.singlePageNav.min.js"></script>
-		<script src="../js/typed.js"></script>
-		<script src="../js/wow.min.js"></script>
-		<script src="../js/custom.js"></script>
+		<script src="js/jquery.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+        <script src="js/jquery.singlePageNav.min.js"></script>
+		<script src="js/typed.js"></script>
+		<script src="js/wow.min.js"></script>
+		<script src="js/custom.js"></script>
 		
 		<body id="top">
 
@@ -48,7 +48,7 @@
 						<span class="icon icon-bar"></span>
 					</button>
 					<a href="#top" class="navbar-brand">
-						<img src="../images/NexxusLabLogo.png" alt="Company Logo" class="logo">NEXXUS LAB</a>
+						<img src="images/NexxusLabLogo.png" alt="Company Logo" class="logo">NEXXUS LAB</a>
 					</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
