Major changes on the Navbar and minor changes in the home

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<link rel="stylesheet" href="css/font-awesome.min.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/nav-bar.css">
 
 
 		<script src="js/jquery.js"></script>
@@ -66,28 +67,23 @@
 		 
 
     	<!-- start home -->
-		<section id="home">
+		<section id="home" style="background-image: url('images/StartBackgroundPhoto.png');">
 			<div class="container">
-				<div class="row justify-content-center"> <!-- Centering the row -->
-					<!-- Column for the image -->
-					<div class="col-md-4 text-center"> <!-- Centering the content within the column -->
-						<img src="/images/3DNexxusLogo.gif" alt="Description of image" class="img-responsive">
-					</div>
-					<!-- Column for the text -->
-					<div class="col-md-7">
-						<h1 class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">Leave the <span>tech</span> to us.</h1>
-						<div class="element">
-							<div class="sub-element">We are here to provide for you.</div>
-							<div class="sub-element">We are a team of developers and advisors from the Philippines.</div>
-							<div class="sub-element">Contact us for more inquiries.</div>
-						</div>
-						<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-						<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-						<a href="" class="btn btn-default wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/nexxuslabtest/ask-me-anything?background_color=303030&text_color=ffffff'});return false;">BOOK AN APPOINTMENT</a>
-					</div>
+			  <div class="row text-center">
+				<div class="col-md-7">
+				  <h1 class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">Leave the <span>tech</span> to us.</h1>
+				  <div class="element">
+					<div class="sub-element">We are here to provide for you.</div>
+					<div class="sub-element">We are a team of developers and advisors from the Philippines.</div>
+					<div class="sub-element">Contact us for more inquiries.</div>
+				  </div>
+				  <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+				  <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+				  <a href="" class="btn btn-default wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/nexxuslabtest/ask-me-anything?background_color=303030&text_color=ffffff'});return false;">BOOK AN APPOINTMENT</a>
 				</div>
+			  </div>
 			</div>
-		</section>
+		  </section>
     	<!-- end home -->
 
 	<!-- start service -->
