Changes in the home part and mobile compatibility.

--- a/index.html
+++ b/index.html
@@ -119,13 +119,18 @@
 						<h4>Automata Development</h4>
 						<p>We’re at the cutting edge of artificial intelligence, offering a suite of AI services that redefine the boundaries of possibility. Our AI solutions are designed to empower your business with smart automation, predictive analytics, and advanced data processing capabilities. We’re committed to delivering AI-driven strategies that optimize operations, enhance decision-making, and create unparalleled customer experiences. Partner with us to unlock the transformative potential of AI for your enterprise.</p>
 					</div>
+					<div class="col-md-4 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.6s">
+						<i class="fa fa-cog"></i>
+						<h4>AI Marketing Services</h4>
+						<p>We’re at the cutting edge of artificial intelligence, offering a suite of AI services that redefine the boundaries of possibility. Our AI solutions are designed to empower your business with smart automation, predictive analytics, and advanced data processing capabilities. We’re committed to delivering AI-driven strategies that optimize operations, enhance decision-making, and create unparalleled customer experiences. Partner with us to unlock the transformative potential of AI for your enterprise.</p>
+					</div>
 				</div>
 				</div>
 			</div>
 		</section>
 	<!-- end service -->
 
-	    	<!-- start portfolio -->
+	<!-- start portfolio -->
 			<section id="portfolio">
 				<div class="container">
 					<div class="row">
