Updated the Icons in Services

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 						<p>We transform visions into tangible experiences with our Mock-ups & Prototypes services. Our skilled designers specialize in creating detailed and interactive prototypes that serve as blueprints for your future projects. We’re dedicated to meticulously crafting every aspect of the user interface, ensuring that each prototype is not only a visual blueprint but also a strategic tool that guides the development process. Let us help you visualize the potential of your ideas with clarity and precision.</p>
 					</div>
 					<div class="col-md-4 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.2s">
-						<i class="fa fa-wrench"></i>
+						<i class="fa fa-code"></i>
 						<h4>Software Development</h4>
 						<p>Our seasoned developers are artisans of code, adept at crafting state-of-the-art web, hybrid, and native applications that propel your business forward. We don’t just create software; we engineer success stories. Our team is committed to translating your organizational needs into digital realities, ensuring each application is a perfect fit for your vision and objectives. Let us be the architects of your digital future.</p>
 					</div>
@@ -108,9 +108,8 @@
 						<h4>Network Security</h4>
 						<p>We deliver an all-encompassing suite of Network Security services designed to shield your enterprise from the evolving landscape of cyber threats. Our approach is proactive and vigilant, ensuring that your business is safeguarded against any form of digital intrusion. Trust us to be the guardians of your network, providing peace of mind in a connected world.</p>
 					</div>
-					<div class="bottomservices">
 					<div class="col-md-4 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.4s">
-						<i class="fa fa-phone"></i>
+						<i class="fa fa-cloud"></i>
 						<h4>IT Support Training</h4>
 						<p>We pride ourselves on delivering unparalleled technical and customer support services that set the industry standard. Our commitment to excellence is reflected in our interactive live and on-demand webinars, meticulously designed to foster professional development. We empower our clients with the knowledge and certifications they need to excel, ensuring they’re equipped for success in the digital landscape. Join us, and experience support that not only answers your call but elevates your potential.</p>
 					</div>
@@ -120,7 +119,7 @@
 						<p>We’re at the cutting edge of artificial intelligence, offering a suite of AI services that redefine the boundaries of possibility. Our AI solutions are designed to empower your business with smart automation, predictive analytics, and advanced data processing capabilities. We’re committed to delivering AI-driven strategies that optimize operations, enhance decision-making, and create unparalleled customer experiences. Partner with us to unlock the transformative potential of AI for your enterprise.</p>
 					</div>
 					<div class="col-md-4 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.6s">
-						<i class="fa fa-cog"></i>
+						<i class="fa fa-globe"></i>
 						<h4>AI Marketing Services</h4>
 						<p>We’re at the cutting edge of artificial intelligence, offering a suite of AI services that redefine the boundaries of possibility. Our AI solutions are designed to empower your business with smart automation, predictive analytics, and advanced data processing capabilities. We’re committed to delivering AI-driven strategies that optimize operations, enhance decision-making, and create unparalleled customer experiences. Partner with us to unlock the transformative potential of AI for your enterprise.</p>
 					</div>
