--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/nav-bar.css">
+		
 
 
 		<script src="js/jquery.js"></script>
@@ -66,8 +67,8 @@
 		<!-- end navigation -->
 		 
 
-    	<!-- start home -->
-		<section id="home" style="background-image: url('images/StartBackgroundPhoto.png');">
+    	<!-- start hero -->
+		<section id="hero" style="background-image: url('images/StartBackgroundPhoto.png');">
 			<div class="container">
 			  <div class="row text-center">
 				<div class="col-md-7">
@@ -84,7 +85,7 @@
 			  </div>
 			</div>
 		  </section>
-    	<!-- end home -->
+    	<!-- end hero -->
 
 	<!-- start service -->
 		<section id="service">
@@ -95,32 +96,32 @@
 					<div class="col-md-4 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.1s">
 						<i class="fa fa-android"></i>
 						<h4>Mock-ups & Prototypes</h4>
-						<p>We transform visions into tangible experiences with our Mock-ups & Prototypes services. Our skilled designers specialize in creating detailed and interactive prototypes that serve as blueprints for your future projects. We’re dedicated to meticulously crafting every aspect of the user interface, ensuring that each prototype is not only a visual blueprint but also a strategic tool that guides the development process. Let us help you visualize the potential of your ideas with clarity and precision.</p>
+						<p>We transform visions into experiences with our Mock-ups & Prototypes services. Our designers create detailed, interactive prototypes as blueprints for your projects. Each prototype guides development with clarity and precision.</p>
 					</div>
 					<div class="col-md-4 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.2s">
 						<i class="fa fa-code"></i>
 						<h4>Software Development</h4>
-						<p>Our seasoned developers are artisans of code, adept at crafting state-of-the-art web, hybrid, and native applications that propel your business forward. We don’t just create software; we engineer success stories. Our team is committed to translating your organizational needs into digital realities, ensuring each application is a perfect fit for your vision and objectives. Let us be the architects of your digital future.</p>
+						<p>Our developers craft cutting-edge web, hybrid, and native applications. We translate your needs into digital realities, ensuring each application fits your vision. Let us shape your digital future.</p>
 					</div>
 					<div class="col-md-4 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.3s">
 						<i class="fa fa-wifi"></i>
 						<h4>Network Security</h4>
-						<p>We deliver an all-encompassing suite of Network Security services designed to shield your enterprise from the evolving landscape of cyber threats. Our approach is proactive and vigilant, ensuring that your business is safeguarded against any form of digital intrusion. Trust us to be the guardians of your network, providing peace of mind in a connected world.</p>
+						<p>We offer comprehensive Network Security services to shield your enterprise from cyber threats. Our proactive approach ensures your business is safeguarded against digital intrusions. Trust us to protect your network and provide peace of mind.</p>
 					</div>
 					<div class="col-md-4 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.4s">
 						<i class="fa fa-cloud"></i>
 						<h4>IT Support Training</h4>
-						<p>We pride ourselves on delivering unparalleled technical and customer support services that set the industry standard. Our commitment to excellence is reflected in our interactive live and on-demand webinars, meticulously designed to foster professional development. We empower our clients with the knowledge and certifications they need to excel, ensuring they’re equipped for success in the digital landscape. Join us, and experience support that not only answers your call but elevates your potential.</p>
+						<p>We offer top-tier technical support and industry-standard customer service through interactive webinars. Join us for support that elevates your potential in the digital landscape.</p>
 					</div>
 					<div class="col-md-4 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.5s">
 						<i class="fa fa-cog"></i>
 						<h4>Automata Development</h4>
-						<p>We’re at the cutting edge of artificial intelligence, offering a suite of AI services that redefine the boundaries of possibility. Our AI solutions are designed to empower your business with smart automation, predictive analytics, and advanced data processing capabilities. We’re committed to delivering AI-driven strategies that optimize operations, enhance decision-making, and create unparalleled customer experiences. Partner with us to unlock the transformative potential of AI for your enterprise.</p>
+						<p>We specialize in cutting-edge AI services that automate processes, provide predictive analytics, and enhance customer experiences. Partner with us to unlock AI's transformative potential for your business.</p>
 					</div>
 					<div class="col-md-4 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.6s">
 						<i class="fa fa-globe"></i>
 						<h4>AI Marketing Services</h4>
-						<p>We’re at the cutting edge of artificial intelligence, offering a suite of AI services that redefine the boundaries of possibility. Our AI solutions are designed to empower your business with smart automation, predictive analytics, and advanced data processing capabilities. We’re committed to delivering AI-driven strategies that optimize operations, enhance decision-making, and create unparalleled customer experiences. Partner with us to unlock the transformative potential of AI for your enterprise.</p>
+						<p>We offer cutting-edge AI services for smart automation, predictive analytics, and advanced data processing. Partner with us to transform your business with AI-driven strategies.</p>
 					</div>
 				</div>
 				</div>
@@ -193,6 +194,8 @@
 												<img src="images/Portfolio/Portfolio8.png" style="width:100%" alt="Portfolio Image">
 											</a>
 										</div>
+										<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+										<a class="next" onclick="plusSlides(1)">&#10095;</a>
 									</div>
 									<br>
 									
@@ -229,7 +232,7 @@
 								<h3 class="media-heading">MISSION</h3>
 							</div>
 
-								<p class="media-paragraph">Nexxus Lab Philippines is committed to democratizing access to technology. We exist to lower the barriers of entry, enabling companies and individuals to leverage their own technological solutions through our platform. Our approach is guided by a belief in as-needed pricing - we offer competitive rates that reflect the value delivered, without the industry premium. This commitment to affordability and value is at the heart of our operations.</p>
+								<p class="media-paragraph">Nexxus Lab Philippines makes technology accessible by lowering entry barriers. We offer competitive, value-driven pricing without industry premiums, empowering companies and individuals to create their own tech solutions.</p>
 
 						</div>
 					</div>
@@ -242,7 +245,7 @@
 								<h3 class="media-heading">VISION</h3>
 							</div>
 
-								<p class="media-paragraph">Nexxus Lab Philippines envisions a world where technology is accessible to all, empowering individuals and businesses alike. We strive to be a catalyst for this transformation, driving innovation and progress for our clients and our country. </p>
+								<p class="media-paragraph">Nexxus Lab Philippines envisions a world where technology is accessible to all, empowering individuals and businesses. We drive innovation and progress for our clients and country. </p>
 
 						</div>
 					</div>
@@ -254,7 +257,7 @@
 								</div>
 								<h3 class="media-heading">VALUES</h3>
 							</div>
-								<p class="media-paragraph">Nexxus Lab values open and honest communication, where employees are encouraged to speak up and share their thoughts, even if they differ from the established views. Integrity and reliability are also paramount, as the lab aims to deliver high-quality results and stand behind their work with confidence. Mutual support and respect for one another are at the heart of Nexxus Lab's values, fostering an inclusive and empathetic work environment.</p>
+								<p class="media-paragraph">Nexxus Lab values open communication, integrity, and reliability. We foster an inclusive, empathetic work environment with mutual support and respect.</p>
 						</div>
 					</div>
 				</div>
@@ -276,7 +279,6 @@
     							<div class="team-des">
     								<h4>Chris Bautista</h4>
     								<span>Founder and CEO</span>
-    								<p>Chris embodies leadership with a visionary approach and a commitment to organizational excellence. His strategic acumen and ability to inspire teams propel the company forward, shaping its culture and driving its success.</p>
     							</div>
 							</a>
     					</div>
@@ -288,7 +290,6 @@
     							<div class="team-des">
     								<h4>Loreleen Mae Sablot</h4>
     								<span>Co-founder and Senior Software Engineer</span>
-    								<p>Loreleen brings technical expertise and innovation to the forefront. Her dedication to quality and problem-solving skills not only enhance product development but also set a high standard for engineering excellence within the team.</p>
     							</div>
 							</a>
     					</div>
