Working contact us form. Removed "Teams" as of now.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/nav-bar.css">
+		<link rel="stylesheet" href="css/queries.css">
 		
 
 
@@ -267,35 +268,7 @@
 
     	<!-- start team -->
     	<section id="team">
-    		<div class="container">
-    			<div class="row">
-    				<div class="col-md-12">
-    					<h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">MEET THE <span>NEXXUS LAB</span> TEAM</h2>
-    				</div>
-    				<div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.3s">
-    					<div class="team-wrapper">
-							<a href="https://www.linkedin.com/in/chris-bautista-31935854/" target="_blank" class="team-link">
-    						<img src="images/Team/Team_SirChris.png" class="img-responsive" alt="team img 1">
-    							<div class="team-des">
-    								<h4>Chris Bautista</h4>
-    								<span>Founder and CEO</span>
-    							</div>
-							</a>
-    					</div>
-    				</div>
-    				<div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.6s">
-    					<div class="team-wrapper">
-							<a href="https://www.linkedin.com/in/loreleensablot/" target="_blank" class="team-link">
-    						<img src="images/Team/Team_MissLoreleen.png" class="img-responsive" alt="team img 2">
-    							<div class="team-des">
-    								<h4>Loreleen Mae Sablot</h4>
-    								<span>Co-founder and Senior Software Engineer</span>
-    							</div>
-							</a>
-    					</div>
-    				</div>
-    			</div>
-    		</div>
+    		
     	</section>
     	<!-- end team -->
 
@@ -321,7 +294,8 @@
     					<address>
     						<p class="address-title">EMAIL US!</p>
     						<span>If you don't need to book a meeting with us, email us here!</span>
-    						<form action="#" method="post">
+    						<form action="https://api.web3forms.com/submit" method="POST">
+								<input type="hidden" name="access_key" value="79e81f3e-f3be-459f-93e7-8bcc516d62bd">
 								<label>NAME</label>
 								<input name="fullname" type="text" class="form-control" id="fullname">
 									 
